--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@doop/service-debug",
   "version": "1.0.1",
   "description": "A debug service for the Doop framework",
+  "main": "libs/debug-factory.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MomsFriendlyDevCo/doop-service-debug.git"
