feat: Added middleware

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/MomsFriendlyDevCo/doop-service-debug#readme",
   "dependencies": {
     "@momsfriendlydevco/email": "^2.3.5",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "lodash": "^4.17.21"
   }
 }
