--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@doop/service-debug",
+  "name": "@doop/debug",
   "version": "1.0.4",
   "description": "A debug service for the Doop framework",
   "main": "libs/debug-factory.js",
